IndexBuildsCoordinator fails to unregister index build

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-07-01
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When the IndexBuildsCoordinator is enabled in the createIndexes command, it is responsible for maintaining a registry of active index builds. However, in certain cases, an index build may be erroneously left registered if an exception is thrown from
      MultiIndexBlock::init().

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: