SERVER-41843 add uuid to BackgroundOperationInProgressForNamespace error message